--- a/Frontened Practice/CSS/part-1/hoverToSee.html
+++ b/Frontened Practice/CSS/part-1/hoverToSee.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-<style>
-     p{
-        display: none;
-        background-color: aqua;
+    <style>
+      p {
+        display: block;
+        background-color: transparent;
         height: 100px;
         width: 200px;
         padding: 20px;
-    }
+      }
 
-    div:hover p{
-        display: block;
-      cursor: pointer ;
-        
-    } 
-</style>
-</head>
-<body>
+      div:hover p {
+        cursor: pointer;
+        background-color: rgb(215, 209, 209);
+      }
+    </style>
+  </head>
+  <body>
     <div>
-
-        <h2>p Tag</h2>
-        <p>Hover over this to see the content</p>
+      <h2>p Tag</h2>
+      <p>Hover over this to see the content</p>
     </div>
-    
-</body>
+  </body>
 </html>
