--- a/Frontened Practice/html/Part-1.html
+++ b/Frontened Practice/html/Part-1.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first webpage</title>
   </head>
 
@@ -121,18 +121,19 @@
       <br />
       <br />
       <label>DOB:</label>
-      <input type="date">
-      <br/>
-      <br/>
+      <input type="date" />
+
+      <br />
       <label>Address:</label>
+      <br />
       <textarea></textarea>
-      <br/>
-      <br/>
+      <br />
+      <br />
 
       <label>Upload</label>
-      <input type="file">
-      <br/>
-      <br/>
+      <input type="file" />
+      <br />
+      <br />
 
       <input type="submit" />
       <button type="submit">Finish</button>
@@ -161,7 +162,7 @@
         placeholder="Enter your Email-id"
         maxlength="50"
       />(max 50 characters allowed)
-      
+
       <br />
       <br />
       <label>Mobile:</label>
@@ -170,21 +171,20 @@
       <br />
       <br />
       <label for="person">Person :</label>
-      <input type="radio" name="person" >Student
-      <input type="radio" name="person" >Programmer 
+      <input type="radio" name="person" />Student
+      <input type="radio" name="person" />Programmer
 
-      <br/>
-      <br/>
+      <br />
+      <br />
       <label>Hobbies:</label>
-      <input type="checkbox">cricket
-      <input type="checkbox">movies
-      <input type="checkbox">music
+      <input type="checkbox" />cricket <input type="checkbox" />movies
+      <input type="checkbox" />music
 
       <br />
       <br />
       <input type="submit" />
-      <button type="submit">Finish</button>
-      <hr>
+      <button type="click">Finish</button>
+      <hr />
     </form>
 
     <br />
