--- a/Frontened Practice/CSS/part-2/animation.html
+++ b/Frontened Practice/CSS/part-2/animation.html
@@ -8,39 +8,41 @@
     <style>
       .parent-square {
         width: 400px;
-        height: 400px;
+        height: 200px;
         background-color: aquamarine;
       }
 
       .square {
         width: 50%;
-        height: 50%;
+        height: 100%;
         background-color: tomato;
         /* transition: transform 1s cubic-bezier(0.07,-0.44, 0.83, 1.47); */
 
-                animation: move  1s cubic-bezier(0.07,-0.44, 0.83, 1.47) forwards 5 alternate ;
+                animation: move  3s cubic-bezier(0.07,-0.44, 0.83, 1.47) forwards 2 alternate-reverse;
       }
 
-      .square:hover{
+      /* .square:hover{
         animation-play-state: paused;
-      }
+      } */
 
       /* .parent-square:hover .square {
 
-        /* background-color: goldenrod; */
-        /* transform: translateY(50%); */
-        /* background-color: violet;
-        /*transform: translateX(100%);
+         background-color: goldenrod; 
+         transform: translateY(50%); 
+         /* background-color: violet;
+        transform: translateX(100%); 
 }  */
 
       @keyframes move  {
         0%{transform: translateY(0);}
 
-        33%{transform:translateY(100%)}
+        25%{transform:translateY(100%)}
 
-         66%{transform: translatex(100%) translateY(100%)}
+         50%{transform: translateX(100%) translateY(100%)}
 
-          100%{transform:translateX(100%)}
+         75%{transform: translateX(100%);}
+
+          100%{transform:translateX(0)}
         
       }
 
