--- a/Frontened Practice/CSS/part-2/keyframes.html
+++ b/Frontened Practice/CSS/part-2/keyframes.html
@@ -13,23 +13,23 @@
         border-radius: 50%;
         background-color: tomato;
 
-        /* border: 1.5px solid black;    */
-        /* border-width: 1.5px;
-          border-style: solid;
-          border-color: black;
-        animation: name duration timing-function delay iteration-count direction fill-mode; */
+        /*  border: 1.5px solid black;
+        border-width: 1.5px;
+        border-style: solid;
+        border-color: black;
+         animation: name duration timing-function delay iteration-count direction fill-mode; */
 
         animation-name: color-change;
-        animation-duration: 2s;
-        animation-delay: 2s;
+        animation-duration: 1s;
+        animation-delay: 1s;
         animation-iteration-count: 4;
         /* animation-iteration-count: infinite; */
         /* animation-direction: reverse; */
         /* animation-direction: alternate;
        */
-        animation-direction: alternate-reverse;
+        animation-direction: alternate;
 
-        animation-timing-function: cubic-bezier(0.07, -0.44, 0.83, 1.47);
+        animation-timing-function: ease;
       }
       .circle:hover {
         animation-play-state: paused;
@@ -41,7 +41,17 @@
         /* from{background-color: yellow;}
            to{background-color: blueviolet;} */
 
-        0% {
+          0%{
+            background-color: yellow;
+            top: 300px;
+          }
+          100%{
+            background-color: green;
+            top: 0;
+          }
+
+          
+        /* 0% {
           background-color: tomato;
           top: 0px;
           left: 0px;
@@ -69,7 +79,7 @@
           background-color: green;
           top: 0px;
           left: 0px;
-        }
+        }  */
       }
     </style>
   </head>
